deploy/k8s/quickfix-gateway-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfix-gateway-headless
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: quickfix-gateway
  ports:
    - name: fix
      port: 5001
      targetPort: fix
    - name: management
      port: 8080
      targetPort: management
