deploy/k8s/quickfix-gateway-owner-0-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfix-gateway-owner-0
spec:
  selector:
    app.kubernetes.io/name: quickfix-gateway
    statefulset.kubernetes.io/pod-name: quickfix-gateway-0
  ports:
    - name: fix
      port: 5001
      targetPort: fix
