deploy/k8s/quickfix-gateway-owner-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfix-gateway-owner-1
spec:
  selector:
    app.kubernetes.io/name: quickfix-gateway
    statefulset.kubernetes.io/pod-name: quickfix-gateway-1
  ports:
    - name: fix
      port: 5001
      targetPort: fix
